# HABLA-PROCEDURAL-RUNTIME-EXECUTION

./: .gitignore  README.md  aurorizacion.py
.codex_handoff/: COMANDOS_DE_LANZAMIENTO.md  CONTEXTO_DE_CONTINUIDAD.md
HABLA_CyberLACE_Security_Engine(1)/HABLA_CyberLACE_Security_Engine/: README.md  cyberlace_config.yaml  pyproject.toml  requirements.txt
HABLA_CyberLACE_Security_Engine(1)/HABLA_CyberLACE_Security_Engine/cyberlace/: __init__.py
HABLA_CyberLACE_Security_Engine(1)/HABLA_CyberLACE_Security_Engine/cyberlace/api/: app.py  schemas.py
HABLA_CyberLACE_Security_Engine(1)/HABLA_CyberLACE_Security_Engine/cyberlace/core/: policy.py  risk.py  semantic_firewall.py
HABLA_CyberLACE_Security_Engine(1)/HABLA_CyberLACE_Security_Engine/cyberlace/guards/: tool_guard.py
HABLA_CyberLACE_Security_Engine(1)/HABLA_CyberLACE_Security_Engine/cyberlace/policies/: default_policies.yaml  sensitive_patterns.yaml
HABLA_CyberLACE_Security_Engine(1)/HABLA_CyberLACE_Security_Engine/cyberlace/storage/: evidence_graph.py
HABLA_CyberLACE_Security_Engine(1)/HABLA_CyberLACE_Security_Engine/examples/: import_usage.py  rest_client.py
HABLA_CyberLACE_Security_Engine(1)/HABLA_CyberLACE_Security_Engine/scripts/: install_and_run.sh  run_api.py
HABLA_CyberLACE_Security_Engine(1)/HABLA_CyberLACE_Security_Engine/tests/: test_cyberlace_engine.py
docs/: index.html
docs/media/: README.md
habla_agentic_engine_v5_1_lace_visual/: .gitignore  LACE.md  LACE_LOG.md  README.md  lo ulti mo que paso.odt
habla_agentic_engine_v5_1_lace_visual/chat/: chat_cli.py
vista_IA/test/: preguntaIA.py
(+7120 files in other folders)
