[project]
name = "habla-cyberlace-security-engine"
version = "0.1.0"
description = "Capa de seguridad cognitiva para harnesses IA HABLA/LACE"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.4",
    "PyYAML>=6.0.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
